--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -18,8 +18,8 @@
             android:text="@string/texto"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
-            android:textSize="30dp"
-            android:layout_marginTop="50dp"/>
+            android:textSize="30sp"
+            android:layout_marginTop="50sp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
