--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp">
+        android:layout_marginTop="120sp">
     <TextView
         android:id="@+id/TextView"
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:layout_gravity="center_horizontal"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
