--- a/app/src/main/res/layout-large-land/activity_main.xml
+++ b/app/src/main/res/layout-large-land/activity_main.xml
@@ -20,30 +20,32 @@
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.535"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.17" />
+        app:layout_constraintVertical_bias="0.204" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="125dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="166dp"
-        android:layout_marginLeft="160dp"
+        android:layout_width="153dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginLeft="166dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="160dp"
-        android:layout_marginRight="160dp"
-        android:layout_marginBottom="390dp"
+        android:layout_marginRight="157dp"
         android:background="@drawable/btn_border"
         android:text="@string/button"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.541"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.073" />
+        app:layout_constraintVertical_bias="0.036" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
