--- a/app/src/main/res/layout-large-port/activity_main.xml
+++ b/app/src/main/res/layout-large-port/activity_main.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="1sp"
-    android:paddingBottom="1sp"
-    android:paddingLeft="1sp"
-    android:paddingRight="1sp"
+    android:paddingLeft="1dp"
+    android:paddingRight="1dp"
+    android:paddingTop="1dp"
+    android:paddingBottom="1dp"
     android:background="@drawable/presentacion"
     tools:context=".MainActivity">
 
@@ -20,18 +20,17 @@
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.17" />
+        app:layout_constraintVertical_bias="0.2" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="125dp"
-        android:layout_height="51dp"
+        android:layout_width="131dp"
+        android:layout_height="59dp"
         android:layout_marginStart="166dp"
-        android:layout_marginLeft="160dp"
+        android:layout_marginLeft="166dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="160dp"
         android:layout_marginRight="160dp"
@@ -39,11 +38,12 @@
         android:background="@drawable/btn_border"
         android:text="@string/button"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.073" />
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
