--- a/app/src/main/res/layout-xlarge-land/activity_main.xml
+++ b/app/src/main/res/layout-xlarge-land/activity_main.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="1sp"
-    android:paddingBottom="1sp"
-    android:paddingLeft="1sp"
-    android:paddingRight="1sp"
+    android:paddingLeft="1dp"
+    android:paddingRight="1dp"
+    android:paddingTop="1dp"
+    android:paddingBottom="1dp"
     android:background="@drawable/presentacion"
     tools:context=".MainActivity">
 
@@ -17,33 +17,32 @@
         android:layout_height="wrap_content"
         android:text="@string/texto"
         android:textColor="#FFFFFF"
-        android:textSize="40sp"
+        android:textSize="100sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.17" />
+        app:layout_constraintVertical_bias="0.264" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="125dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="166dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginRight="160dp"
-        android:layout_marginBottom="390dp"
+        android:layout_width="181dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="579dp"
+        android:layout_marginLeft="579dp"
+        android:layout_marginTop="146dp"
+        android:layout_marginEnd="578dp"
+        android:layout_marginRight="578dp"
+        android:layout_marginBottom="300dp"
         android:background="@drawable/btn_border"
         android:text="@string/button"
         android:textColor="#FFFFFF"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.073" />
+        app:layout_constraintVertical_bias="1.2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
